<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/quiz_image"
        android:contentDescription="@string/login_image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="220dp"
        android:background="@drawable/login_shape"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageView"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextSignUpemail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/email_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextloginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@null" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextSignUpPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/black"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/password_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:text="Sign In"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center">
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background = "@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OR"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_margin="3dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background = "@color/black"/>
        </LinearLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/buttonGoogleSignIn"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp">

        </com.google.android.gms.common.SignInButton>

        <TextView
            android:id="@+id/textviewSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/account"
            android:textSize="20sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/forgot_password"
            android:textSize="20sp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>